--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -67,6 +67,10 @@
     @apply inline-flex items-center justify-center whitespace-nowrap rounded-md border border-slate-200 bg-white px-6 py-3 text-base font-semibold text-slate-600 shadow-sm transition hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:ring-offset-1;
   }
 
+  .ff-button--danger {
+    @apply inline-flex items-center justify-center whitespace-nowrap rounded-md border border-red-600 bg-red-600 px-6 py-3 text-base font-semibold text-white shadow-sm transition hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-1;
+  }
+
   .ff-button--compact {
     @apply px-4 py-2 text-base;
   }
