--- a/app/views/layouts/modal.html.erb
+++ b/app/views/layouts/modal.html.erb
@@ -6,7 +6,7 @@
   <body class="min-h-screen bg-white text-slate-900 sm:bg-slate-100">
     <%= render "layouts/flash" %>
 
-    <main class="mx-auto w-full max-w-2xl px-4 py-12 sm:px-0" data-controller="autofocus">
+    <main class="mx-auto w-full max-w-2xl px-6 py-3 sm:px-6 sm:py-6" data-controller="autofocus">
       <%= yield %>
     </main>
   </body>
