--- a/app/views/layouts/modal.html.erb
+++ b/app/views/layouts/modal.html.erb
@@ -3,10 +3,8 @@
   <head>
     <%= render "layouts/head" %>
   </head>
-
-  <% body_classes = class_names("min-h-screen", "text-slate-900", content_for?(:body_class) ? content_for(:body_class) : "bg-slate-100") %>
-  <body class="<%= body_classes %>">
-    <main class="mx-auto w-full max-w-3xl px-4 py-12 sm:py-16">
+  <body class="min-h-screen bg-white text-slate-900 sm:bg-slate-100">
+    <main class="mx-auto w-full max-w-2xl px-6 py-3 sm:px-6 sm:py-6" data-controller="autofocus">
       <%= render "layouts/flash" %>
       <%= yield %>
     </main>
