Removed the lingering Bootstrap usage called out

--- a/app/views/posts/destroy.turbo_stream.erb
+++ b/app/views/posts/destroy.turbo_stream.erb
@@ -3,8 +3,7 @@
 <% end %>
 
 <%= turbo_stream.prepend "flash-messages" do %>
-  <div class="alert alert-info alert-dismissible fade show" role="alert">
-    The post will be withdrawn from FreeFeed but will remain here to prevent it from being imported again.
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <div class="ff-alert ff-alert--info" role="alert">
+    <span>The post will be withdrawn from FreeFeed but will remain here to prevent it from being imported again.</span>
   </div>
 <% end %>
