--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,87 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title><%= content_for(:title) || "Feeder" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= yield :head %>
-
-    <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
-
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
-
-    <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag "application.bootstrap", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags("legacy") %>
+    <%= render "layouts/head" %>
   </head>
 
-  <body class="<%= content_for(:body_class) %>">
+  <body class="min-h-screen text-slate-900 <%= content_for?(:body_class) ? content_for(:body_class) : 'bg-white' %>">
     <% if Current.user %>
-      <%# Navigation bar %>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <%= link_to "F2", root_path, class: "navbar-brand fw-bold" %>
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <%# Navigation links %>
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <%= link_to "Status", status_path, class: "nav-link #{'active text-decoration-underline' if current_page?(status_path)}" %>
-              </li>
-              <% if Current.user.active? %>
-                <li class="nav-item">
-                  <%= link_to "Feeds", feeds_path, class: "nav-link #{'active text-decoration-underline' if current_page?(feeds_path) || controller_name == 'feeds/'}" %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to "Posts", posts_path, class: "nav-link #{'active text-decoration-underline' if current_page?(posts_path) || controller_name == 'posts/'}" %>
-                </li>
-                <% if policy(Event).index? %>
-                  <li class="nav-item">
-                    <%= link_to "Admin Panel", admin_path, class: "nav-link #{'active text-decoration-underline' if current_page?(admin_path) || controller_name.start_with?('admin/')}" %>
-                  </li>
-                <% end %>
-              <% end %>
-            </ul>
-
-            <%# Dropdown menu %>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <%= link_to settings_path, class: "nav-link" do %>
-                  <%= icon("gear") %>
-                <% end %>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <%= render "layouts/navbar" %>
     <% end %>
 
-    <main class="container-md py-4">
-      <div id="flash-messages">
-        <% if notice %>
-          <%= render "shared/flash_alert", alert_type: "success", message: notice %>
-        <% end %>
-
-        <% if alert %>
-          <%= render "shared/flash_alert", alert_type: "danger", message: alert %>
-        <% end %>
-      </div>
-
+    <main class="mx-auto w-full max-w-5xl px-4 py-8">
+      <%= render "layouts/flash" %>
       <%= yield %>
     </main>
   </body>
