--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -3,62 +3,63 @@
 <% sort_menu_id = "feed-sort-menu" %>
 
 <div class="space-y-8">
-  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
-    <div>
-      <h1 class="ff-h1">Feeds</h1>
+  <%= render PageHeaderComponent.new(title: "Feeds") do |header| %>
+    <% header.with_context do %>
       <% if (summary_line = feed_summary_line(active_count: @active_feed_count, inactive_count: @inactive_feed_count)) %>
         <p class="ff-text mt-1 sm:mt-0"><%= summary_line %></p>
       <% end %>
-    </div>
-    <div class="flex w-full items-center justify-between gap-3 sm:w-auto sm:justify-end">
-      <%# Sorting dropdown %>
-      <% if @feeds.any? %>
-        <div class="relative">
-          <button
-            id="<%= "#{sort_menu_id}-button" %>"
-            type="button"
-            data-dropdown-toggle="<%= sort_menu_id %>"
-            data-dropdown-placement="bottom-end"
-            class="<%= class_names('ff-button', 'ff-button--secondary', 'ff-button--compact', 'gap-2') %>"
-            aria-haspopup="true"
-            aria-expanded="false">
-              <%= icon("arrow-down-up", css_class: "text-slate-500", aria_hidden: true) %>
-              <span class="flex items-center gap-2">
-                <span><%= @sortable_presenter.current_title %></span>
-                <span class="sr-only"><%= @sortable_presenter.current_direction == "asc" ? "Ascending" : "Descending" %></span>
-              </span>
-              <%= icon("chevron-down", css_class: "text-xs text-slate-400", aria_hidden: true) %>
-          </button>
-          <div
-            id="<%= sort_menu_id %>"
-            class="ff-dropdown-panel"
-            role="menu"
-            aria-labelledby="<%= "#{sort_menu_id}-button" %>">
-            <ul class="py-1 text-base text-slate-600">
-              <% @sortable_presenter.options.each do |option| %>
-                <li>
-                  <%= link_to option.path,
-                              class: class_names(
-                                "ff-dropdown-item",
-                                "font-semibold text-slate-900": option.active?
-                              ) do %>
-                    <span><%= option.title %></span>
-                    <% if option.icon_name.present? %>
-                      <span class="flex items-center text-slate-500">
-                        <%= icon(option.icon_name, css_class: "text-slate-400", aria_hidden: true) %>
-                        <span class="sr-only"><%= option.active_direction == "asc" ? "Ascending" : "Descending" %></span>
-                      </span>
+    <% end %>
+    <% header.with_actions do %>
+      <div class="flex w-full items-center justify-between gap-3 sm:w-auto sm:justify-end">
+        <%# Sorting dropdown %>
+        <% if @feeds.any? %>
+          <div class="relative">
+            <button
+              id="<%= "#{sort_menu_id}-button" %>"
+              type="button"
+              data-dropdown-toggle="<%= sort_menu_id %>"
+              data-dropdown-placement="bottom-end"
+              class="<%= class_names('ff-button', 'ff-button--secondary', 'ff-button--compact', 'gap-2') %>"
+              aria-haspopup="true"
+              aria-expanded="false">
+                <%= icon("arrow-down-up", css_class: "text-slate-500", aria_hidden: true) %>
+                <span class="flex items-center gap-2">
+                  <span><%= @sortable_presenter.current_title %></span>
+                  <span class="sr-only"><%= @sortable_presenter.current_direction == "asc" ? "Ascending" : "Descending" %></span>
+                </span>
+                <%= icon("chevron-down", css_class: "text-xs text-slate-400", aria_hidden: true) %>
+            </button>
+            <div
+              id="<%= sort_menu_id %>"
+              class="ff-dropdown-panel"
+              role="menu"
+              aria-labelledby="<%= "#{sort_menu_id}-button" %>">
+              <ul class="py-1 text-base text-slate-600">
+                <% @sortable_presenter.options.each do |option| %>
+                  <li>
+                    <%= link_to option.path,
+                                class: class_names(
+                                  "ff-dropdown-item",
+                                  "font-semibold text-slate-900": option.active?
+                                ) do %>
+                      <span><%= option.title %></span>
+                      <% if option.icon_name.present? %>
+                        <span class="flex items-center text-slate-500">
+                          <%= icon(option.icon_name, css_class: "text-slate-400", aria_hidden: true) %>
+                          <span class="sr-only"><%= option.active_direction == "asc" ? "Ascending" : "Descending" %></span>
+                        </span>
+                      <% end %>
                     <% end %>
-                  <% end %>
-                </li>
-              <% end %>
-            </ul>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
           </div>
-        </div>
-      <% end %>
-      <%= link_to "New Feed", new_feed_path, class: class_names("ff-button", "ff-button--compact", "w-full sm:w-auto") %>
-    </div>
-  </div>
+        <% end %>
+        <%= link_to "New Feed", new_feed_path, class: class_names("ff-button", "ff-button--compact", "w-full sm:w-auto") %>
+      </div>
+    <% end %>
+  <% end %>
 
   <% if @feeds.any? %>
     <%= render FeedsListComponent.new(feeds: @feeds) %>
