Correct buttons justification

--- a/app/components/page_header_component.html.erb
+++ b/app/components/page_header_component.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   </div>
   <% if action_buttons? %>
-    <div class="flex w-full items-center justify-between gap-3 sm:w-auto sm:justify-end">
+    <div class="flex w-full items-center justify-start gap-3 sm:w-auto sm:justify-end">
       <% action_buttons.each do |button| %>
         <%= button %>
       <% end %>
