--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,13 +1,15 @@
-<div class="space-y-3 mb-4" id="flash-messages">
-  <% if notice %>
-    <div class="ff-alert ff-alert--info alert" role="alert">
-      <span><%= sanitize(notice) %></span>
-    </div>
-  <% end %>
+<% if notice || alert %>
+  <div class="space-y-3 mb-4" id="flash-messages">
+    <% if notice %>
+      <div class="ff-alert ff-alert--info alert" role="alert">
+        <span><%= sanitize(notice) %></span>
+      </div>
+    <% end %>
 
-  <% if alert %>
-    <div class="ff-alert ff-alert--error alert" role="alert">
-      <span><%= sanitize(alert) %></span>
-    </div>
-  <% end %>
-</div>
+    <% if alert %>
+      <div class="ff-alert ff-alert--error alert" role="alert">
+        <span><%= sanitize(alert) %></span>
+      </div>
+    <% end %>
+  </div>
+<% end %>
