--- a/app/components/page_header_component.html.erb
+++ b/app/components/page_header_component.html.erb
@@ -1,9 +1,9 @@
-<header class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
+<header class="flex flex-col gap-5 sm:flex-row sm:items-start sm:justify-between">
   <div>
     <h1 class="ff-h1"><%= @title %></h1>
     <% if context_paragraphs? %>
       <% context_paragraphs.each do |paragraph| %>
-        <p class="ff-text mt-1 sm:mt-0"><%= paragraph %></p>
+        <p class="ff-text"><%= paragraph %></p>
       <% end %>
     <% end %>
   </div>
