--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -35,10 +35,11 @@
 %>
 
 <div class="space-y-8">
-  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
-    <h1 class="ff-h1">Settings</h1>
-    <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
-  </div>
+  <%= render PageHeaderComponent.new(title: "Settings") do |header| %>
+    <% header.with_action_button do %>
+      <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+    <% end %>
+  <% end %>
 
   <section class="space-y-4">
     <h2 class="ff-h2">Your Account</h2>
