--- a/app/views/admin/system_stats/show.html.erb
+++ b/app/views/admin/system_stats/show.html.erb
@@ -29,10 +29,11 @@
 %>
 
 <div class="space-y-8">
-  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
-    <h1 class="ff-h1">System Stats</h1>
-    <%= link_to "Back to Admin", admin_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
-  </div>
+  <%= render PageHeaderComponent.new(title: "System Stats") do |header| %>
+    <% header.with_action_button do %>
+      <%= link_to "Back to Admin", admin_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+    <% end %>
+  <% end %>
 
   <section class="space-y-4">
     <h2 class="ff-h2">Disk Usage</h2>
