--- a/app/views/invites/index.html.erb
+++ b/app/views/invites/index.html.erb
@@ -1,17 +1,18 @@
 <% content_for :title, "Invites" %>
 
 <div class="space-y-8">
-  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
-    <div>
-      <h1 class="ff-h1">Invites</h1>
+  <%= render PageHeaderComponent.new(title: "Invites") do |header| %>
+    <% header.with_context_paragraph do %>
       <div id="invite-stats">
         <%= render "summary", **@invite_stats %>
       </div>
-    </div>
-    <div id="create-invite-button">
-      <%= render "create_button", can_create: policy(Invite).create? %>
-    </div>
-  </div>
+    <% end %>
+    <% header.with_action_button do %>
+      <div id="create-invite-button">
+        <%= render "create_button", can_create: policy(Invite).create? %>
+      </div>
+    <% end %>
+  <% end %>
 
   <div id="invites-table">
     <%= render "table", invites: @invites %>
