--- a/app/components/page_header_component.html.erb
+++ b/app/components/page_header_component.html.erb
@@ -1,5 +1,5 @@
 <header class="flex flex-col gap-5 sm:flex-row sm:items-start sm:justify-between">
-  <div>
+  <div class="flex flex-col gap-5">
     <h1 class="ff-h1"><%= @title %></h1>
     <% if context_paragraphs? %>
       <% context_paragraphs.each do |paragraph| %>
