--- a/app/views/settings/access_tokens/edit.html.erb
+++ b/app/views/settings/access_tokens/edit.html.erb
@@ -1,10 +1,11 @@
 <% content_for :title, "Edit Token" %>
 
 <div class="space-y-8">
-  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
-    <h1 class="ff-h1">Edit Token</h1>
-    <%= link_to "Back to Access Tokens", settings_access_tokens_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
-  </div>
+  <%= render PageHeaderComponent.new(title: "Edit Token") do |header| %>
+    <% header.with_action_button do %>
+      <%= link_to "Back to Access Tokens", settings_access_tokens_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+    <% end %>
+  <% end %>
 
   <div class="max-w-3xl space-y-6">
     <div class="ff-alert ff-alert--warning">
