--- a/app/views/settings/email_updates/edit.html.erb
+++ b/app/views/settings/email_updates/edit.html.erb
@@ -1,10 +1,11 @@
 <% content_for :title, "Change Email Address" %>
 
 <div class="space-y-8">
-  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
-    <h1 class="ff-h1">Change Email Address</h1>
-    <%= link_to "Back to Settings", settings_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
-  </div>
+  <%= render PageHeaderComponent.new(title: "Change Email Address") do |header| %>
+    <% header.with_action_button do %>
+      <%= link_to "Back to Settings", settings_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+    <% end %>
+  <% end %>
 
   <% if @user.email_deactivated? %>
     <div class="ff-alert ff-alert--danger max-w-2xl space-y-2" role="alert">
